--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,40 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="393"
+    android:viewportHeight="393">
+  <group android:scaleX="0.68"
+      android:scaleY="0.68"
+      android:translateX="62.88"
+      android:translateY="62.88">
+    <group>
+      <clip-path
+          android:pathData="M0,0h393v393h-393z"/>
+      <path
+          android:pathData="M0,0h393v393h-393z"
+          android:fillColor="#7D1F1F"
+          android:fillAlpha="0.83"/>
+      <path
+          android:pathData="M114,95L280,95A14,14 0,0 1,294 109L294,128.03A14,14 0,0 1,280 142.03L114,142.03A14,14 0,0 1,100 128.03L100,109A14,14 0,0 1,114 95z"
+          android:strokeWidth="4"
+          android:fillColor="#00000000"
+          android:strokeColor="#FFA500"/>
+      <path
+          android:pathData="M128.81,116.16L264.02,116.16A2.94,2.94 0,0 1,266.96 119.1L266.96,119.1A2.94,2.94 0,0 1,264.02 122.04L128.81,122.04A2.94,2.94 0,0 1,125.87 119.1L125.87,119.1A2.94,2.94 0,0 1,128.81 116.16z"
+          android:fillColor="#FF9900"/>
+      <path
+          android:pathData="M118.32,174.98L274.83,174.13A14,14 0,0 1,288.9 188.06L289,204.79A14,14 0,0 1,275.07 218.86L118.56,219.71A14,14 51.32,0 1,104.49 205.79L104.4,189.06A14,14 0,0 1,118.32 174.98z"
+          android:strokeWidth="4"
+          android:fillColor="#00000000"
+          android:strokeColor="#FFA500"/>
+      <path
+          android:pathData="M114,251.38L280,251.38A14,14 0,0 1,294 265.38L294,284.41A14,14 0,0 1,280 298.41L114,298.41A14,14 0,0 1,100 284.41L100,265.38A14,14 0,0 1,114 251.38z"
+          android:strokeWidth="4"
+          android:fillColor="#00000000"
+          android:strokeColor="#FFA500"/>
+      <path
+          android:pathData="M128.81,272.54L264.02,272.54A2.94,2.94 0,0 1,266.96 275.48L266.96,275.48A2.94,2.94 0,0 1,264.02 278.42L128.81,278.42A2.94,2.94 0,0 1,125.87 275.48L125.87,275.48A2.94,2.94 0,0 1,128.81 272.54z"
+          android:fillColor="#FF9900"/>
+    </group>
+  </group>
 </vector>
